# ship-distance-estimation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
examples/distance_api_integration/: distance_calculator.py
src/ship_distance/: config.py  detector.py  distance_api.py  distance_butterfly_api.py  distance_hl_api.py  geometry.py  main.py  sensor_reader.py  tracker.py  video_processor.py  visualizer.py
tools/: check_comments.py
