[project]
name = "ship-distance-estimation"
version = "v0.0.1"
last-update = "01.07.2026"
requires-python = "==3.10.12"
dependencies = [
    "astral>=3.2",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "toml>=0.10.2",
    "ultralytics>=8.3.241",
]

[tool.black]
line-length = 79
target-version = ["py310"]
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 79

exclude = [
    "migrations/**",
    ".venv/**",
    "build/**",
    "dist/**",
    ".git/**",
    "__pycache__/**",
]

[tool.ruff.lint]
select = [
  "N",
  "D101",
  "ANN",
  "I",
]

fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["ship_distance"]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = false
lines-after-imports = 2
